@@ -91,6 +91,8 @@ Changes in version 1.3.1 (?? Mar 2007)
 
 GUI:
 
+  - Fixed a messagebox focus bug when no 'okay' button was present
+
   - Added setColor and setScaleImage to GUIImage.
 
   - Made GUIListBox clip properly.
